--- a/src/App.scss
+++ b/src/App.scss
@@ -1537,7 +1537,7 @@ $colorBGnav:#e0e0e0;
         .boxinputtimeContentwork{
             display: flex;
             align-items: center;
-            width: 100%;
+            width: 50%;
             height: auto;
         }
       
@@ -1557,6 +1557,11 @@ $colorBGnav:#e0e0e0;
             font-size: 11px;
             text-align: center;
             border: 1px solid $colorBorderDrop;
+        }
+        .inputtime-timeSTS{
+            width: 100%;
+            height: auto;
+            text-align: center;
         }
         .input-timeSTS::-webkit-outer-spin-button,.input-timeSTS::-webkit-inner-spin-button{
             -webkit-appearance: none;
