--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1476,7 +1476,7 @@ html .btn-rowinput-modalboxContentwork, body .btn-rowinput-modalboxContentwork {
 html .boxinputtimeContentwork, body .boxinputtimeContentwork {
   display: flex;
   align-items: center;
-  width: 100%;
+  width: 50%;
   height: auto;
 }
 html .box-datetime-contentwork, body .box-datetime-contentwork {
@@ -1495,6 +1495,11 @@ html .input-timeSTS, body .input-timeSTS {
   font-size: 11px;
   text-align: center;
   border: 1px solid #9e9e9e;
+}
+html .inputtime-timeSTS, body .inputtime-timeSTS {
+  width: 100%;
+  height: auto;
+  text-align: center;
 }
 html .input-timeSTS::-webkit-outer-spin-button, html .input-timeSTS::-webkit-inner-spin-button, body .input-timeSTS::-webkit-outer-spin-button, body .input-timeSTS::-webkit-inner-spin-button {
   -webkit-appearance: none;
